--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = "0.11.1"
-select = "0.5.0"
+regex = "1"
+reqwest = { version = "0.11", features = [ "blocking" ] }
