--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 anyhow = "1.0.38"
 regex = "1"
 reqwest = { version = "0.11", features = [ "blocking" ] }
+tokio = { version = "1", features = ["macros"]  }
