--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ edition = "2018"
 anyhow = "1.0.38"
 regex = "1"
 reqwest = { version = "0.11", features = [ "blocking" ] }
+semver = "0.11.0"
 tokio = { version = "1", features = ["macros"]  }
