--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ anyhow = "1.0.38"
 regex = "1"
 reqwest = { version = "0.11", features = [ "blocking" ] }
 semver = "0.11.0"
+term = "0.7.0"
 tokio = { version = "1", features = ["macros"]  }
